# dbt-bigquery

./: .bumpversion.cfg  .changie.yaml  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  dev_requirements.txt  hatch.toml  mypy.ini  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.env.example  tox.ini
.changes/: 0.0.0.md  1.0.0.md  1.1.0.md  1.1.1.md  1.1.2.md  1.2.0.md  1.2.1.md  1.3.0-b1.md  1.3.0-b2.md  1.3.0-rc1.md  1.3.0-rc2.md  1.3.0-rc3.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.4.0-a1.md  1.4.0-b1.md  1.4.0-rc1.md  1.4.0.md  1.4.1.md  1.4.2.md  1.4.3.md  1.4.4.md  1.4.5.md  1.5.0-a1.md  1.5.0-b1.md  1.5.0-b2.md  1.5.0-b3.md  1.5.0-b4.md  1.5.0-rc1.md  1.5.0.md  1.5.1.md  1.5.2.md  1.5.3.md  1.5.4.md  1.5.5.md  1.5.6.md  1.5.7.md  1.5.8.md  (+51 more)
.changes/1.3.0/: Features-20220804-154944.yaml  Features-20220804-155057.yaml  Under the Hood-20220804-155219.yaml  Under the Hood-20220806-142912.yaml  Under the Hood-20220817-154151.yaml  Under the Hood-20220825-073235.yaml
.changes/1.4.0/: Dependencies-20221010-181501.yaml  Features-20220807-164227.yaml  Features-20220913-084836.yaml  Features-20220919-232721.yaml  Features-20221020-223914.yaml  Fixes-20230109-105325.yaml  Under the Hood-20220908-143218.yaml  Under the Hood-20220915-145212.yaml  Under the Hood-20220920-151057.yaml  Under the Hood-20221207-151813.yaml  Under the Hood-20221221-124711.yaml
.changes/1.5.0/: Features-20221220-193731.yaml  Features-20230223-145508.yaml  Features-20230228-094234.yaml  Features-20230303-132509.yaml  Fixes-20221213-102005.yaml  Fixes-20230125-174159.yaml  Fixes-20230202-010332.yaml  Fixes-20230213-203317.yaml  Fixes-20230216-140756.yaml  Fixes-20230309-181313.yaml  Fixes-20230315-130504.yaml  Fixes-20230322-162200.yaml  Fixes-20230408-035117.yaml  Fixes-20230411-143515.yaml  (+4 more)
.github/: pull_request_template.md
dbt-bigquery/: CHANGELOG.md  CONTRIBUTING.md  hatch.toml
docker/: Dockerfile  README.md  dev.Dockerfile  test.sh
docker_dev/: ubuntu-py311.Dockerfile  ubuntu.Dockerfile
scripts/: build-dist.sh  env-setup.sh
tests/: conftest.py
(+807 files in other folders)
